@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that link_to with an href of # when using :method will not allow for click-through without JavaScript #7037 [stevenbristol/josh]
+
 * Fixed that radio_button_tag should generate unique ids #3353 [BobSilva/rebecca/josh]
 
 * Fixed that HTTP authentication should work if the header is called REDIRECT_X_HTTP_AUTHORIZATION as well #6754 [mislaw]
